--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
     Content
   </div>
   <div class="footer">
-    All Right are Reserved by @Masum Hossain
+    All Right are Reserved by @Masum Hossain <br>
+    FB: facebook.com/masumhossain.fb <br>
+    INSTAGRAMM: instagram/masum.insta
   </div>
 </body>
 </html>
